--- a/DiscogsDesktop/libDicogsDesktopControls/packages.config
+++ b/DiscogsDesktop/libDicogsDesktopControls/packages.config
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JetBrains.Annotations" version="2018.2.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
-  <package id="RateLimiter" version="1.1.1" targetFramework="net461" />
-  <package id="RestSharp" version="106.3.1" targetFramework="net461" />
+  <package id="ComposableAsync.Core" version="1.3.0" targetFramework="net461" />
+  <package id="JetBrains.Annotations" version="2020.3.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="RateLimiter" version="2.2.0" targetFramework="net461" />
+  <package id="RestSharp" version="106.11.7" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
-  <package id="System.Reactive" version="4.1.0" targetFramework="net461" />
-  <package id="System.Reactive.Core" version="4.1.0" targetFramework="net461" />
-  <package id="System.Reactive.Interfaces" version="4.1.0" targetFramework="net461" />
-  <package id="System.Reactive.Linq" version="4.1.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net461" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="5.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="5.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="5.0.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
