--- a/DiscogsDesktop/toolBuildPortablePackage/packages.config
+++ b/DiscogsDesktop/toolBuildPortablePackage/packages.config
@@ -1,4 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JetBrains.Annotations" version="2020.3.0" targetFramework="net461" />
+  <package id="AngleSharp" version="0.14.0" targetFramework="net472" />
+  <package id="ComposableAsync.Core" version="1.3.0" targetFramework="net472" />
+  <package id="JetBrains.Annotations" version="2020.3.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="RateLimiter" version="2.2.0" targetFramework="net472" />
+  <package id="RestSharp" version="106.11.7" targetFramework="net472" />
+  <package id="RestSharpHelper" version="1.1.1" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net472" />
+  <package id="System.Reactive.Linq" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="5.0.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="TagLibSharp" version="2.2.0" targetFramework="net472" />
+  <package id="YoutubeExplode" version="5.1.9" targetFramework="net472" />
 </packages>
