--- a/DiscogsDesktop/DiscogsDesktop/App.config
+++ b/DiscogsDesktop/DiscogsDesktop/App.config
@@ -60,8 +60,8 @@
       <setting name="Token" serializeAs="String">
         <value />
       </setting>
-      <setting name="MaxItems" serializeAs="String">
-        <value>100</value>
+      <setting name="ExportFieldInTitle" serializeAs="String">
+        <value />
       </setting>
       <setting name="TableFontSize" serializeAs="String">
         <value>12</value>
