--- a/DiscogsDesktop/DiscogsDesktop/Properties/Settings.settings
+++ b/DiscogsDesktop/DiscogsDesktop/Properties/Settings.settings
@@ -8,8 +8,8 @@
     <Setting Name="Token" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="MaxItems" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">100</Value>
+    <Setting Name="ExportFieldInTitle" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="TableFontSize" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">12</Value>
